# okx-client-gw-py

./: .gitignore  .markdownlint.json  .validation_exceptions  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml
docs/architecture/: OKX_API_FUNCTIONAL_DECOMPOSITION.md
docs/prs/: feature-epic-GWC-0003-candle-processing.md  feature-epic-OKX-0001-public-market-data-client.md  feature-epic-OKX-0002-private-apis-and-examples.md  feature-epic-OKX-0003-market-maker-sample.md  refactor-epic-OKX-0003-clean-architecture.md
docs/specs/: market_maker_adaptation.md
notebooks/: 01_getting_started.ipynb  02_trading_derivatives.ipynb  03_market_data_exploration.ipynb
samples/okx_market_maker/: README.md  __init__.py  main.py
samples/okx_market_maker/adapters/: __init__.py
samples/okx_market_maker/application/: __init__.py
samples/okx_market_maker/config/: __init__.py
samples/okx_market_maker/context/: __init__.py  market_context.py
samples/okx_market_maker/core/: __init__.py
samples/okx_market_maker/domain/: __init__.py  enums.py
samples/okx_multicurrency_margin_monitor/: .env.example  __init__.py  delta_neutral_analyser.py  main.py  okx_margin_monitor.py  okx_margin_monitor_gw.py
samples/okx_portfolio_margin_monitor/: .env.example  README.md  __init__.py  delta_neutral_analyser.py  main.py  okx_margin_monitor.py  okx_margin_monitor_gw.py
scripts/: README.md
src/okx_client_gw/: __init__.py
src/okx_client_gw/adapters/: __init__.py  (+1 more)
tests/: __init__.py
tests/features/: __init__.py  market_data.feature
tests/integration/: conftest.py  test_market_data.py
(+121 files in other folders)
